--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,4 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./config.yaml:/app/config.yaml
-    restart: unless-stopped
+      - .:/app
