--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    if: github.repository == 'ZJUIntl-share/blackboard-RSS'
+    if: github.repository == 'ZJUIntl-share/ZJUIntl-RSS'
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
@@ -61,5 +61,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: blackboard-rss-${{ matrix.os }}-${{ matrix.arch }}
+          name: zjuintl-rss-${{ matrix.os }}-${{ matrix.arch }}
           path: output/
